--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="sorter">
         <img src="src/assets/defaultL.jpg" class="left sort image">
 
-        <div class="starting start button">Bombergirl Project Character Sorter<br><br>Click to Start!</div>
+        <div class="starting start button">Bombergirl Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
@@ -59,7 +59,7 @@
     <div class="results"></div>
 
     <div class="info">
-        <a href="https://github.com/execfera/charasort/">Source Code</a> | <a href="?IwVmE4CZNAGSBs5YB8QA5zAMzoCwqzCxEmnDGVkkUXVHEON1lW0tPOn1s9suNyTGr3Y0G3QcN4SBQunNaCxC+pPLsuqreNob5MylKOtuk5RoWGlenhM63TInfyNSRS-aKuaDV+7bKjrJ8wbpClhyu1BZ6bnKG8R5m5kHOHly6gariITE2vvyRxpocZtqW8moxpZ7GGbmlmbGilZXe6j75CSGtLnbAhAxAA">Best Taste</a> | <a class="clearsave">Clear Save Data</a>
+        <a href="https://github.com/execfera/charasort/">Source Code</a> <a href="?IwVmE4CZNAGSBs5YB8QA5zAMzoCwqzCxEmnDGVkkUXVHEON1lW0tPOn1s9suNyTGr3Y0G3QcN4SBQunNaCxC+pPLsuqreNob5MylKOtuk5RoWGlenhM63TInfyNSRS-aKuaDV+7bKjrJ8wbpClhyu1BZ6bnKG8R5m5kHOHly6gariITE2vvyRxpocZtqW8moxpZ7GGbmlmbGilZXe6j75CSGtLnbAhAxAA"></a> <a class="clearsave"></a>
  
         <p>Sorter for Bombergirl characters.</p>
         <p>Click on the character you like better from the two.</p>
