--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="og:site_name" content="Bombergirl Character Sorting">
   <meta name="og:description" content="A simple website for sorting Bombergirl characters in a formatted list.">
-  <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
+  <meta name="og:image" content="https://i.imgur.com/BO7CdPF.png">
   <title>Bombergirl Character Sorting</title>
 
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
