--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2023-05-10.js"></script>
   <script src="src/js/data/2023-05-11.js"></script>
+  <script src="src/js/data/2023-11-25.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
   <script src="src/js/lz-string.min.js"></script>
