--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="src/js/data/2023-05-11.js"></script>
   <script src="src/js/data/2023-11-25.js"></script>
   <script src="src/js/data/2024-10-11.js"></script>
+  <script src="src/js/data/2025-02-25.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
   <script src="src/js/lz-string.min.js"></script>
